--- a/client/sentiments/sentiments.css
+++ b/client/sentiments/sentiments.css
@@ -31,27 +31,35 @@ tr:hover td, tr:hover th {
 
 
 .datatable-options {
-	padding: .75rem 1rem !important;
+	padding: .75rem 1rem;
 	background-color: #FAFAFC;
 	border: 1px solid #DDDDEE;
 	border-bottom: 0;
-	width: 100% !important;
-	margin-top: 10px;
+	width: 100%;
 }
 
 .datatable-options input {
-	border: 1px solid #ccc;
-	background: #fff;
-	width: calc(100% - 15px);
-	border: 1px solid #ccc;
-	padding: 0 7px;
 	margin: 0;
 }
 
 .table {
-	border: 1px solid #DDDDEE;
+	/*border: 1px solid #DDDDEE;*/
+	/*border-collapse: initial;*/
 	width: 100% !important;
 	white-space: normal !important;
+}
+
+.table tr {
+	border-left: 1px solid #DDDDEE;
+	border-right: 1px solid #DDDDEE;
+}
+
+.table tr:first-child {
+	border-top: 1px solid #DDDDEE;
+}
+
+.table tr:last-child {
+	border-bottom: 1px solid #DDDDEE;
 }
 
 .table tr th, .table tr td {
